<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="find">Поиск</string>
    <string name="find_hint">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="user_email">deins.merezhin@yandex.ru</string>
    <string name="subject_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="separator_dot">•</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="title_searsh_results">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
</resources>