<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
      android:layout_marginBottom="40dp"
        />
    <Button
        android:layout_width="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/find"
        android:textSize="@dimen/text_size_primary"
        android:backgroundTint="@color/white"
        android:textColor="@color/main_screen_text"
        app:cornerRadius="@dimen/main_menu_button_radius"
        android:layout_marginBottom="@dimen/padding"
        app:icon="@drawable/find"
        app:iconGravity="textStart"
        app:iconTint="@color/main_screen_text"
        app:iconPadding="@dimen/main_menu_padding_pic_text"
        />
    <Button
        android:layout_width="match_parent"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/media"
        android:textSize="@dimen/text_size_primary"
        android:backgroundTint="@color/white"
        android:textColor="@color/main_screen_text"
        android:layout_marginBottom="@dimen/padding"
        app:cornerRadius="@dimen/main_menu_button_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconTint="@color/main_screen_text"
        app:iconPadding="@dimen/main_menu_padding_pic_text"
        />
    <Button
        android:id="@+id/settings_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_primary"
        android:backgroundTint="@color/white"
        android:textColor="@color/main_screen_text"
        app:cornerRadius="@dimen/main_menu_button_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/main_screen_text"
        app:iconPadding="@dimen/main_menu_padding_pic_text"
        />
</LinearLayout>