<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/track_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <Button
        android:id="@+id/track_button_back"
        style="@style/BackFromSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginTop="16dp"
        android:elevation="0dp"
        android:foreground="?attr/selectableItemBackground"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:stateListAnimator="@null"
        app:icon="@drawable/ic_back_arrow_24"
        app:iconPadding="0dp"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artwork_url"
        android:layout_width="0dp"
        android:layout_height="312dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/track_button_back" />

    <TextView
        android:id="@+id/track_name"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/text_size_primary"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/artwork_url" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_size_secondary"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/track_name" />

    <ImageButton
        android:id="@+id/add_to_album_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_add_media_23"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="39dp"
        android:background="@color/img_color_inv"
        android:src="@drawable/ic_play_84"
        app:layout_constraintBottom_toTopOf="@id/playback_duration"
        app:layout_constraintEnd_toStartOf="@id/add_favorite_button"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/add_to_album_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/add_favorite_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_add_faivorite_25_23"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/playback_duration"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="0:30"
        android:textSize="@dimen/text_size_secondary"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <TextView
        android:id="@+id/duration_label"
        style="@style/TextTrackLabelTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/duration_label"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/playback_duration" />

    <TextView
        android:id="@+id/duration"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_track_table"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/duration_label" />

    <TextView
        android:id="@+id/album_label"
        style="@style/TextTrackLabelTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/album_label"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/duration_label" />

    <TextView
        android:id="@+id/album"
        style="@style/TextTrack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="end"
        android:textSize="@dimen/text_track_table"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/album_label"
        app:layout_constraintTop_toTopOf="@id/album_label" />

    <TextView
        android:id="@+id/year_label"
        style="@style/TextTrackLabelTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/year_label"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/album_label" />

    <TextView
        android:id="@+id/year"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_track_table"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/year_label" />

    <TextView
        android:id="@+id/genre_label"
        style="@style/TextTrackLabelTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre_label"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/year_label" />

    <TextView
        android:id="@+id/genre"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_track_table"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/genre_label" />

    <TextView
        android:id="@+id/country_label"
        style="@style/TextTrackLabelTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/country_label"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/genre_label" />

    <TextView
        android:id="@+id/country"
        style="@style/TextTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_track_table"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintTop_toTopOf="@id/country_label" />
</androidx.constraintlayout.widget.ConstraintLayout>